tests/export_star_as/export_star_as.exp
Error ----------------------------------------------------------------------------------------------------- dest.js:4:17

Cannot assign `source.num` to `b` because number [1] is incompatible with string [2]. [incompatible-type]

   dest.js:4:17
   4| var b: string = source.num; // Error: num ~> string
                      ^^^^^^^^^^

References:
   source.js:2:20
   2| export const num = 42;
                         ^^ [1]
   dest.js:4:8
   4| var b: string = source.num; // Error: num ~> string
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dest.js:7:17

Cannot assign `source.str` to `d` because string [1] is incompatible with number [2]. [incompatible-type]

   dest.js:7:17
   7| var d: number = source.str; // Error: num ~> string
                      ^^^^^^^^^^

References:
   source.js:1:20
   1| export const str = 'asdf';
                         ^^^^^^ [1]
   dest.js:7:8
   7| var d: number = source.str; // Error: num ~> string
             ^^^^^^ [2]



Found 2 errors
